--- a/app/interface/py/requirements.txt
+++ b/app/interface/py/requirements.txt
@@ -1,4 +1,8 @@
 tornado==6.0.4
-celery==4.4.2
-PyYAML==5.3.1
+celery==4.4.6
+cryptography==2.8
+PyMySQL==0.10.0
 redis==3.4.1
+kafka==1.3.5
+gunicorn==20.0.4
+pytest==5.4.1
